k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calendar-backend
  name: calendar-backend
  namespace: calendar-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: calendar-backend
  type: ClusterIP
