k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: aguzovatii.com
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    traefik.ingress.kubernetes.io/router.tls: true
  name: calendar-backend
  namespace: calendar-backend
spec:
  ingressClassName: traefik
  rules:
  - host: calendar-backend.aguzovatii.com
    http:
      paths:
      - backend:
          service:
            name: calendar-backend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - calendar-backend.aguzovatii.com
    secretName: calendar-backend-tls-cert
